Remove --enable-preview from gradle